[gd_scene load_steps=35 format=2]

[ext_resource path="res://sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/bomb_ui.png" type="Texture" id=3]
[ext_resource path="res://the_theme.tres" type="Theme" id=4]
[ext_resource path="res://sprites/E.png" type="Texture" id=5]
[ext_resource path="res://sprites/bucket.png" type="Texture" id=6]
[ext_resource path="res://sprites/bucket_candy.png" type="Texture" id=7]
[ext_resource path="res://music/full_bag_done.wav" type="AudioStream" id=8]
[ext_resource path="res://music/altar_sacrifice.wav" type="AudioStream" id=9]
[ext_resource path="res://sprites/pumpkin.png" type="Texture" id=10]
[ext_resource path="res://music/punpkin.wav" type="AudioStream" id=11]
[ext_resource path="res://music/gamer_over.wav" type="AudioStream" id=12]

[sub_resource type="Animation" id=3]
resource_name = "PlayerEverything"
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 14.539
height = 2.4952

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0.164706 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://UIs/fonts/Pixellari.ttf"

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://UIs/fonts/Pixellari.ttf"

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://UIs/fonts/Pixellari.ttf"

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://UIs/fonts/Pixellari.ttf"

[sub_resource type="DynamicFont" id=12]
size = 200
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=14]
size = 150
font_data = SubResource( 8 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="DynamicFontData" id=24]
font_path = "res://UIs/fonts/Pixellari.ttf"

[sub_resource type="DynamicFont" id=21]
size = 100
font_data = SubResource( 24 )

[sub_resource type="CircleShape2D" id=22]
radius = 31.9408

[sub_resource type="Animation" id=23]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/newLevel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
speed = Vector2( 300, 500 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = -160
limit_top = -160
limit_right = 1440
limit_bottom = 1440

[node name="playerAnim" type="AnimationPlayer" parent="."]
autoplay = "PlayerEverything"
anims/PlayerEverything = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.5 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="bomb" type="Panel" parent="CanvasLayer"]
margin_left = 1.18921
margin_top = -2.3784
margin_right = 212.189
margin_bottom = 105.622
theme = ExtResource( 4 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bombSprite" type="TextureRect" parent="CanvasLayer/bomb"]
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="TextureRect" parent="CanvasLayer/bomb/bombSprite"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -37.0034
margin_top = -20.522
margin_right = 2.99661
margin_bottom = 19.478
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bombTimer" type="Label" parent="CanvasLayer/bomb"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107.0
margin_right = 0.000213623
margin_bottom = -0.000404358
custom_fonts/font = SubResource( 7 )
text = "READY!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bucket" type="Panel" parent="CanvasLayer"]
margin_left = 1.0
margin_top = 106.0
margin_right = 157.0
margin_bottom = 362.0
theme = ExtResource( 4 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/bucket"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/bucket/VBoxContainer"]
margin_top = 48.0
margin_right = 160.0
margin_bottom = 208.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FULL" type="Label" parent="CanvasLayer/bucket/VBoxContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_top = 184.0
margin_right = 160.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 9 )
text = "FULL!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="points" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -347.0
margin_top = -1.4142
margin_right = -25.0
margin_bottom = 104.586
custom_fonts/font = SubResource( 11 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newLevel" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.68182
margin_bottom = -1.68182
custom_fonts/font = SubResource( 12 )
text = "LEVEL 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end" type="Panel" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="CanvasLayer/end"]
anchor_right = 1.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 14 )
text = "SCORE:
5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/end"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -134.5
margin_top = -302.18
margin_right = 134.5
margin_bottom = -131.18
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 21 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger"]
shape = SubResource( 22 )

[node name="full_bag" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="sacrifice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="game_end" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="newLevel" type="AnimationPlayer" parent="."]
anims/newLevel = SubResource( 23 )

[node name="pumpkinSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0.447407, -32.792 )
texture = ExtResource( 10 )

[node name="pumpkinEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 1.0

[connection signal="pressed" from="CanvasLayer/end/Button" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="trigger" to="." method="_on_trigger_area_entered"]
[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
